force-app/main/default/objects/Visit__c/fields/Check_In_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Longitude__c</fullName>
    <label>Longitude</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>