force-app/main/default/objects/Visit__c/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>