force-app/main/default/objects/Visit__c/fields/Visit_Duration__c.field-meta.xml
<CustomField>
    <fullName>Visit_Duration__c</fullName>
    <formula>( Check_Out_Time__c -  Check_In_Time__c )  * 24</formula>
    <label>Visit Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>