force-app/main/default/objects/Visit__c/recordTypes/Standard_Visit.recordType-meta.xml
<RecordType>
    <fullName>Standard_Visit</fullName>
    <active>true</active>
    <label>Standard Visit</label>
</RecordType>