force-app/main/default/objects/Visit__c/validationRules/Check_In_required_before_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_In_required_before_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c,&quot;Completed&quot;),
    ISBLANK(Check_In_Time__c)
)</errorConditionFormula>
    <errorMessage>Check In Time is required before completing the visit.</errorMessage>
</ValidationRule>