force-app/main/default/objects/Visit__c/validationRules/Check_Out_required_before_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Out_required_before_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c,&quot;Completed&quot;),
    ISBLANK(Check_Out_Time__c)
)</errorConditionFormula>
    <errorMessage>Check Out Time is required before completing the visit.</errorMessage>
</ValidationRule>