force-app/main/default/objects/Visit__c/validationRules/Next_Visit_Date_cannot_be_before_Visit_D.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Visit_Date_cannot_be_before_Visit_D</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Next_Visit_Date__c )),
    Next_Visit_Date__c &lt; Visit_Date__c
)</errorConditionFormula>
    <errorDisplayField>Next_Visit_Date__c</errorDisplayField>
    <errorMessage>Next Visit Date cannot be before Visit Date.</errorMessage>
</ValidationRule>