force-app/main/default/objects/Visit__c/validationRules/Visit_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Visit_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Visit_Date__c</errorDisplayField>
    <errorMessage>Visit Date cannot be in the future.</errorMessage>
</ValidationRule>